# python-pmc-pubone-client

./: .gitignore  README.md  setup.cfg  tox.ini
misc/: run_pip_multi.sh
requirements/: base.in  base.txt  dev.in  dev.txt  test.txt
src/pmc/pubone_client/: __init__.py  exceptions.py  pubone.py
tests/: test_pubone_client.py
