[metadata]
name = pmc-pubone-client
maintainer = Andrei Kolotev
maintainer-email = kolotev@ncbi.nlm.nih.gov
home-page = https://bitbucket.ncbi.nlm.nih.gov/projects/PMC/repos/python-pmc-pubone-client/browse
license = Public Domain 
description = PubOne API client package. 
long_description = README.md
long_description_content_type = text/markdown
classifiers = Development Status :: 4 - Beta
        
        
[files]
packages_root = src
package_dir = src
include_package_data = True
namespace_packages = pmc




[bdist_wheel]
universal = true
